# AOIS

lab_1/: .coverage  README.md  main.py  pyproject.toml
lab_1/src/: __init__.py  arithmetic.py  bcd5421.py  binary_int.py  bits.py  cli.py  ieee754.py  representation.py
lab_1/tests/: test_arithmetic.py  test_bcd5421.py  test_bits.py  test_cli.py  test_ieee754.py
logisim/: 4x_comp.circ  4x_comp_v2.circ  test.circ
